Environment cleanup.